# tauri-typegen

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  TEST_SUMMARY.md  build.rs  package.json  test-init.conf.json
.cargo-husky/hooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  issue.yml
.github/workflows/: ci.yml  issue-labeler.yml
.husky/: pre-commit
examples/tauri-app/: README.md  package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts  package.json
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: analyze_commands.toml  generate_models.toml
permissions/schemas/: schema.json
src/: analyzer.rs  build.rs  cli.rs  commands.rs  desktop.rs  error.rs  generator.rs  lib.rs  mobile.rs  models.rs
src/analysis/: ast_cache.rs  channel_parser.rs  command_parser.rs  dependency_graph.rs  event_parser.rs  mod.rs  serde_parser.rs  struct_parser.rs  type_resolver.rs  validator_parser.rs
src/generators/: generator.rs  mod.rs  vanilla.rs  zod.rs
src/generators/base/: file_writer.rs  mod.rs  template_context.rs  template_helpers.rs  templates.rs  type_conversion.rs  type_visitor.rs
src/generators/base/templates/: header.tera
src/generators/ts/: generator.rs  mod.rs  templates.rs  type_visitor.rs
src/generators/ts/templates/: commands.ts.tera  events.ts.tera  types.ts.tera
src/generators/ts/templates/partials/: command_function.ts.tera  enum.tera  event_listener.ts.tera  interface.tera  param_interface.ts.tera
src/generators/zod/: filters.rs  generator.rs  mod.rs  schema_builder.rs  templates.rs  type_visitor.rs
src/generators/zod/templates/: commands.ts.tera  events.ts.tera  index.ts.tera  types.ts.tera
src/generators/zod/templates/partials/: command_function.ts.tera  enum_schema.ts.tera  field_schema.ts.tera  param_schema.ts.tera  param_schemas.ts.tera  schema.ts.tera  type_aliases.ts.tera
src/interface/: cli.rs  config.rs  mod.rs  output.rs
test_output_librefit_fixed/: commands.ts  index.ts  types.ts
tests/: MIGRATION.md  PHASE2_SUMMARY.md  README.md  integration.rs  integration_e2e.rs  regression.rs  test_analyzer.rs  test_backward_compat.rs  test_channel_discovery.rs  test_channel_with_params_zod.rs  test_command_rename_all.rs  test_commands.rs  test_complex_types.rs  test_enum_serde_rename.rs  test_event_discovery.rs  test_generator.rs  test_hooks.rs  test_integration.rs  test_map_types.rs  test_multiple_commands.rs  test_nested_analysis.rs  test_nested_struct_collection.rs  test_param_serde_rename.rs  test_serde_rename.rs  test_tauri_parameter_filtering.rs  test_validator_integration.rs
tests/common/: mod.rs
tests/fixtures/: basic_commands.rs  channels.rs  complex_types.rs  empty_file.rs  events.rs  invalid_syntax.rs  mod.rs  sample_channels.rs  sample_commands.rs  sample_events.rs  serde_attributes.rs
tests/integration/: test_basic_generation.rs  test_channels.rs  test_events.rs  test_full_pipeline.rs  test_serde_support.rs  test_type_conversion.rs  test_validation_libraries.rs
