[package]
name = "tauri-typegen"
version = "0.2.1"
authors = [ "Stefan Poindl" ]
description = "A rust crate that automatically generates TypeScript models and bindings from your Tauri commands"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-typegen"
license = "MIT"

[dependencies]
tauri = { version = "2.2.0" }
serde = "1.0"
serde_json = "1.0"
thiserror = "2"
syn = { version = "2.0.106", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = {  version = "1.0", features = ["span-locations"] }
walkdir = "2.0"
regex = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"

[[bin]]
name = "cargo-tauri-typegen"
path = "src/bin/cargo-tauri-typegen.rs"

[build-dependencies]
tauri-plugin = { version = "2.0.3", features = ["build"] }

[features]
default = []
build-time-generation = []

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
tempfile = "3.0"
serial_test = "3.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
